--- a/unit_4 /index.html
+++ b/unit_4 /index.html
@@ -2,11 +2,25 @@
 <html>
     <head>
 	    <title>CORREDOR 5</title>
-	    <link rel="stylesheet" type="text/css" href="style.css">
+	    <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
-
     <body>
-    	<h1>CORREDOR </h1>
+    	<header>
+    	<h1>CORREDOR 5</h1>
     	<h2>Recording Studio and Digital Marketing</h2>
+
+    	<a href="#">Home</a>
+    	<a href="#">Studio</a> 
+    	<a href="#">Workshops</a> 
+    	<a href="#">PDF's</a>
+    	<a href="#">E-books</a>
+    	<a href="#">Blog</a> 
+    	<a href="#">Contact</a>
+    	</header>
+
+    	<h3>sign up to receive our newsletter</h3>
+
+    	<p>Go To the Top</p>
+
     </body>
 </html>
