--- a/unit_4 /index.html
+++ b/unit_4 /index.html
@@ -7,18 +7,23 @@
     <body>
     	<header>
     	<h1>CORREDOR 5</h1>
-    	<h2>Recording Studio and Digital Marketing</h2>
 
-    	<a href="#">Home</a>
-    	<a href="#">Studio</a> 
-    	<a href="#">Workshops</a> 
-    	<a href="#">PDF's</a>
-    	<a href="#">E-books</a>
-    	<a href="#">Blog</a> 
-    	<a href="#">Contact</a>
+        <nav>
+    	    <a href="#">Home</a>
+    	    <a href="#">Studio</a> 
+    	    <a href="#">Workshops</a> 
+    	    <a href="#">PDF's</a>
+    	    <a href="#">E-books</a>
+    	    <a href="#">Blog</a> 
+    	    <a href="#">Contact</a>
+    	</nav>
+
     	</header>
 
-    	<h3>sign up to receive our newsletter</h3>
+    	<section>
+    		<h2>Recording Studio and Digital Marketing</h2>
+    		<h3>sign up to receive our newsletter</h3>
+    	</section>
 
     	<p>Go To the Top</p>
 
